--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -81,6 +81,11 @@ jobs:
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - if: matrix.workspace
+        name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - if: matrix.workspace
         name: Node Build
         run: |
           pnpm turbo run build
@@ -98,7 +103,8 @@ jobs:
       # - name: Rust Build
       #   run: |
       #     cargo build --target ${{ matrix.target }} ${{ matrix.package }}
-      - name: Rust Format Check
+      - if: matrix.workspace
+        name: Rust Format Check
         run: |
           cargo fmt --all --check
       - if: matrix.test
