--- a/crates/paymaster/Cargo.toml
+++ b/crates/paymaster/Cargo.toml
@@ -14,14 +14,14 @@
   ethers = { workspace = true }
   eyre = { workspace = true }
   jsonrpsee = { workspace = true }
+  lazy_static = { workspace = true }
   lightdotso-contracts = { workspace = true }
   lightdotso-gas = { workspace = true }
   lightdotso-jsonrpsee = { workspace = true }
   lightdotso-tracing = { workspace = true }
+  lightdotso-utils = { workspace = true }
   reqwest = { workspace = true }
   serde = { workspace = true }
   serde_json = { workspace = true }
-  silius-primitives = { workspace = true }
-  silius-rpc = { workspace = true }
   spki = { workspace = true, optional = true }
   tokio = { workspace = true }
