--- a/foundry.toml
+++ b/foundry.toml
@@ -54,6 +54,8 @@
   optimizer_runs = 200
   ffi = true
   test = "contracts/script/test"
+  fs_permissions = [{ access = "read-write", path = "./tmp.json" }]
+
 
   [profile.script.optimizer_details]
     constantOptimizer = false
