--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -29,7 +29,7 @@ jobs:
           check-name: fly-wait-docker
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
-          allowed-conclusions: success
+          allowed-conclusions: success,skipped,cancelled
       - name: Sleep for 180 seconds
         run: |
           sleep 180s
