feat: ini polling crate

--- a/crates/polling/Cargo.toml
+++ b/crates/polling/Cargo.toml
@@ -9,4 +9,6 @@
   repository.workspace = true
 
 [dependencies]
+  clap = { workspace = true, features = ["derive"] }
+  eyre = { workspace = true }
   lightdotso-graphql = { workspace = true }
