--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -28,6 +28,7 @@
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
   lightdotso-paymaster = { workspace = true }
+  lightdotso-polling = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-prometheus = { workspace = true }
   lightdotso-rpc = { workspace = true }
