--- a/crates/polling/Cargo.toml
+++ b/crates/polling/Cargo.toml
@@ -9,6 +9,9 @@
   repository.workspace = true
 
 [dependencies]
+  chrono = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   eyre = { workspace = true }
   lightdotso-graphql = { workspace = true }
+  lightdotso-tracing = { workspace = true }
+  tokio = { workspace = true }
