--- a/fly/polling/fly.toml
+++ b/fly/polling/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-gas on 2023-08-25T18:46:20-07:00
+# fly.toml app configuration file generated for lightdotso-polling on 2023-09-30T17:23:24-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -18,6 +18,7 @@ kill_timeout = "5s"
   strategy = "canary"
 
 [http_service]
+  internal_port = 0
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
@@ -32,6 +33,6 @@ kill_timeout = "5s"
     method = "get"
     path = "/health"
 
-[metrics]
+[[metrics]]
   port = 9091
   path = "/metrics"
