--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -20,6 +20,7 @@ on:
           - consumer
           - indexer
           - graph
+          - polling
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -373,6 +374,7 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-polling:
+    if: github.event_name == 'workflow_dispatch' && inputs.group == 'polling'
     runs-on: ubuntu-latest
     needs:
       - fly-wait-docker
