--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -13,6 +13,7 @@
   cynic-codegen = { version = "3.2.2" }
   eyre = { workspace = true }
   insta = "1.17"
+  lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { version = "0.11", features = ["json", "blocking"] }
 
