--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,7 +142,7 @@
   rand = "0.8.5"
   rdkafka = { version = "0.33.2", features = ["sasl", "ssl"] }
   redb = "1.0.5"
-  reqwest = "0.11.20"
+  reqwest = { version = "0.11.20", features = ["blocking", "json"] }
   revm = { version = "3", default-features = false, features = [
     "std",
     "serde",
