--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -16,6 +16,7 @@
   lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { version = "0.11", features = ["json", "blocking"] }
+  tokio = { workspace = true }
 
 [dev-dependencies]
   insta = "1.17"
