--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -4,11 +4,11 @@ on:
     branches:
       - main
   pull_request:
-  pull_request_target:
-    types:
-      - opened
-      - closed
-      - synchronize
+  # pull_request_target:
+  #   types:
+  #     - opened
+  #     - closed
+  #     - synchronize
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
