--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -13,8 +13,10 @@
   cynic-codegen = { version = "3.2.2" }
   eyre = { workspace = true }
   insta = "1.17"
+  lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { version = "0.11", features = ["json", "blocking"] }
+  tokio = { workspace = true }
 
 [dev-dependencies]
   insta = "1.17"
