--- a/fly/polling-live/fly.toml
+++ b/fly/polling-live/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-polling on 2023-09-30T17:23:24-07:00
+# fly.toml app configuration file generated for lightdotso-polling-live on 2023-10-02T12:51:48-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
