--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -28,6 +28,7 @@
   lightdotso-rpc = { workspace = true }
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
+  rustc-hex = { workspace = true }
   serde = { workspace = true, features = ["derive"] }
   serde_json = { workspace = true }
   tokio = { workspace = true }
