--- a/crates/polling/Cargo.toml
+++ b/crates/polling/Cargo.toml
@@ -9,14 +9,20 @@
   repository.workspace = true
 
 [dependencies]
+  autometrics = { workspace = true }
   axum = { workspace = true }
   backon = { workspace = true }
   chrono = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
+  ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-constants = { workspace = true }
+  lightdotso-contracts = { workspace = true }
   lightdotso-db = { workspace = true }
   lightdotso-graphql = { workspace = true }
+  lightdotso-kafka = { workspace = true }
+  lightdotso-opentelemetry = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
+  serde_json = { workspace = true }
   tokio = { workspace = true }
