--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -33,6 +33,7 @@
     "@opentelemetry/sdk-trace-node": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
     "@prisma/client": "^5.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.70.0",
     "@sentry/nextjs": "^7.70.0",
     "@tanstack/react-query": "^5.0.0-beta.9",
@@ -46,6 +47,7 @@
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.5",
     "next-auth": "^4.23.1",
+    "next-themes": "^0.2.1",
     "postgres": "^3.3.5",
     "prisma": "^5.2.0",
     "react": "^18.2.0",
