--- a/configurations/tailwindcss/package.json
+++ b/configurations/tailwindcss/package.json
@@ -20,12 +20,14 @@
     "tailwind-config-viewer": "tailwind-config-viewer -o"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.9",
     "tailwind-config-viewer": "^1.7.2",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "windy-radix-palette": "1.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
