--- a/configurations/tailwindcss/package.json
+++ b/configurations/tailwindcss/package.json
@@ -20,6 +20,7 @@
     "tailwind-config-viewer": "tailwind-config-viewer -o"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.0",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
