--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -45,7 +45,9 @@
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "clsx": "^2.0.0",
     "connectkit": "^1.5.2",
+    "framer-motion": "^10.16.4",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.5",
     "next-auth": "^4.23.1",
