--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -71,6 +71,7 @@
     "configurations/kysely/src/db/**/*.ts",
     "configurations/prisma/src/zod/**/*.ts",
     "fly/graph/nginx/**",
+    "packages/client/src/**/*.d.ts",
     "ios/LightWalletSafariExtension/Resources/**/*.js",
     "**/__snapshots__/**",
     "**/*.app/**",
