--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -35,6 +35,7 @@
     "@opentelemetry/sdk-trace-node": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
     "@prisma/client": "^5.2.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.70.0",
     "@sentry/nextjs": "^7.70.0",
