--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.22.11",
+    "@heroicons/react": "^2.0.11",
+    "@lightdotso/client": "workspace:*",
     "@lightdotso/kysely": "workspace:*",
     "@lightdotso/next-auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
@@ -33,19 +35,25 @@
     "@opentelemetry/sdk-trace-node": "^1.15.2",
     "@opentelemetry/semantic-conventions": "^1.15.2",
     "@prisma/client": "^5.2.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.70.0",
     "@sentry/nextjs": "^7.70.0",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@tremor/react": "^3.8.2",
     "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "clsx": "^2.0.0",
     "connectkit": "^1.5.2",
+    "framer-motion": "^10.16.4",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.4.5",
     "next-auth": "^4.23.1",
+    "next-themes": "^0.2.1",
     "postgres": "^3.3.5",
     "prisma": "^5.2.0",
     "react": "^18.2.0",
