feat: ini route groups

--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -4,6 +4,7 @@
     "plugins": [{ "name": "next" }],
     "strict": true,
     "paths": {
+      "@/app/*": ["./app/*"],
       "@/*": ["./src/*"]
     }
   },
