--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,10 +69,17 @@ jobs:
       - rust-turbo
     runs-on: ${{ matrix.os }}
     env:
+      CARGO_INCREMENTAL: 0
+      SCCACHE_GHA_ENABLED: "true"
+      RUST_BACKTRACE: 1
+      RUST_LOG: "sccache=trace"
+      RUSTC_WRAPPER: "sccache"
       RUSTFLAGS: "-A warnings"
       AWS_ACCESS_KEY_ID: ${{ secrets.SCCACHE_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SCCACHE_SECRET_ACCESS_KEY }}
+      SCCACHE_BUCKET: "sccache"
       SCCACHE_ENDPOINT: ${{ secrets.SCCACHE_ENDPOINT }}
+      SCCACHE_REGION: auto
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     permissions:
