--- a/crates/solutions/Cargo.toml
+++ b/crates/solutions/Cargo.toml
@@ -14,4 +14,5 @@
   lightdotso-contracts = { workspace = true }
   rand = { workspace = true }
   serde = { workspace = true }
+  serde_json = { workspace = true }
   tokio = { workspace = true }
