--- a/crates/solutions/Cargo.toml
+++ b/crates/solutions/Cargo.toml
@@ -9,6 +9,7 @@
   repository.workspace = true
 
 [dependencies]
+  async-recursion = "1.0.5"
   ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-contracts = { workspace = true }
