--- a/crates/solutions/Cargo.toml
+++ b/crates/solutions/Cargo.toml
@@ -9,7 +9,11 @@
   repository.workspace = true
 
 [dependencies]
+  async-recursion = "1.0.5"
   ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-contracts = { workspace = true }
+  rand = { workspace = true }
   serde = { workspace = true }
+  serde_json = { workspace = true }
+  tokio = { workspace = true }
