--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -18,13 +18,38 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@babel/core": "^7.22.11",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "13.4.16",
     "@sentry/integrations": "^7.70.0",
     "@sentry/nextjs": "^7.70.0",
-    "next": "^13.4.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.7",
+    "cheerio": "^1.0.0-rc.12",
+    "clsx": "^1.2.0",
+    "feed": "^4.2.2",
+    "mdast-util-to-string": "^3.2.0",
+    "mdx-annotations": "^0.1.3",
+    "motion": "^10.15.5",
+    "next": "13.4.16",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "recma-import-images": "^0.0.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "remark-rehype-wrap": "^0.0.2",
+    "remark-unwrap-images": "^3.0.1",
+    "shiki": "^0.14.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
@@ -35,10 +60,8 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
+    "sharp": "^0.32.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
