--- a/apps/changelog/turbo.json
+++ b/apps/changelog/turbo.json
@@ -5,6 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "env": [
+        "NEXT_PUBLIC_SITE_URL",
         "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_VERCEL_ENV",
         "SENTRY_DSN",
