--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -45,6 +45,8 @@ jobs:
     permissions:
       contents: write
     steps:
+      - run: |
+          pwd
       - name: Fetch Head
         uses: actions/checkout@v4
       - name: Node Install
