perf: ini rundler

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -123,6 +123,9 @@ jobs:
       - name: Make Prisma
         run: |
           pnpm turbo run prisma
+      - name: Make Rundler
+        run: |
+          make rundler
       # - name: Rust Build
       #   run: |
       #     cargo build --target ${{ matrix.target }} ${{ matrix.package }}
