--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -30,7 +30,7 @@ jobs:
           path-to-document: "https://github.com/LightDotSo/CLA/blob/main/CLA.md" # e.g. a CLA or a DCO document
           # branch should not be protected
           branch: "main"
-          allowlist: LightDotSoBot
+          allowlist: LightDotSoBot,shunkakinoki
           remote-organization-name: LightDotSo
           remote-repository-name: CLA
           # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
