--- a/crates/package.json
+++ b/crates/package.json
@@ -13,7 +13,8 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "exit 0"
+    "build": "exit 0",
+    "rundler": "cd ../lib/rundler/crates/sim/tracer && yarn install && yarn run build && cp -r dist ~/.cargo/git/checkouts/rundler-afbc6e8113d271a8/b337dcb/crates/sim/tracer/dist/"
   },
   "publishConfig": {
     "access": "public"
