--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -2,6 +2,8 @@ name: CLA
 on:
   issue_comment:
     types: [created]
+  pull_request:
+    types: [opened, closed, synchronize]
   pull_request_target:
     types: [opened, closed, synchronize]
 permissions:
@@ -10,9 +12,11 @@ permissions:
   pull-requests: write
   statuses: write
 jobs:
-  CLAAssistant:
+  cla:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          pwd
       - name: "CLA Assistant"
         if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
         uses: contributor-assistant/github-action@v2.3.0
@@ -26,7 +30,7 @@ jobs:
           path-to-document: "https://github.com/LightDotSo/CLA/blob/main/CLA.md" # e.g. a CLA or a DCO document
           # branch should not be protected
           branch: "main"
-          allowlist: LightDotSoBot
+          allowlist: LightDotSoBot,shunkakinoki
           remote-organization-name: LightDotSo
           remote-repository-name: CLA
           # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
