--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -24,14 +24,11 @@ jobs:
           # This token is required only if you have configured to store the signatures in a remote repository/organization
           PERSONAL_ACCESS_TOKEN: ${{ secrets.BOT_TOKEN }}
         with:
-          path-to-signatures: "signatures/version1/cla.json"
           path-to-document: "https://github.com/LightDotSo/CLA/blob/main/CLA.md" # e.g. a CLA or a DCO document
-          # branch should not be protected
-          branch: "main"
           allowlist: LightDotSoBot
-          remote-organization-name: LightDotSo
           remote-repository-name: CLA
           # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
+          # remote-organization-name: LightDotSo
           #remote-organization-name: enter the remote organization name where the signatures should be stored (Default is storing the signatures in the same repository)
           #remote-repository-name: enter the  remote repository name where the signatures should be stored (Default is storing the signatures in the same repository)
           #create-file-commit-message: 'For example: Creating file for storing CLA Signatures'
