--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -15,18 +15,20 @@ jobs:
   cla:
     runs-on: ubuntu-latest
     steps:
-      - name: "CLA Assistant"
-        if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
-        uses: contributor-assistant/github-action@v2.3.1
+      - if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
+        uses: Roblox/cla-signature-bot@master
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
           # the below token should have repo scope and must be manually added by you in the repository's secret
           # This token is required only if you have configured to store the signatures in a remote repository/organization
           PERSONAL_ACCESS_TOKEN: ${{ secrets.BOT_TOKEN }}
         with:
-          path-to-document: "https://github.com/LightDotSo/CLA/blob/main/CLA.md" # e.g. a CLA or a DCO document
-          allowlist: LightDotSoBot
-          remote-repository-name: CLA
+          path-to-signatures: "signatures/version1/cla.json"
+          url-to-cladocument: "https://github.com/LightDotSo/CLA/blob/main/CLA.md" # e.g. a CLA or a DCO document
+          branch: main
+          whitelist: LightDotSoBot
+          use-remote-repo: true
+          remote-repo-name: LightDotSo/CLA
           # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
           # remote-organization-name: LightDotSo
           #remote-organization-name: enter the remote organization name where the signatures should be stored (Default is storing the signatures in the same repository)
