--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -29,6 +29,7 @@ jobs:
           whitelist: LightDotSoBot
           use-remote-repo: true
           remote-repo-name: LightDotSo/CLA
+          remote-repo-pat: ${{ secrets.BOT_TOKEN }}
           # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
           # remote-organization-name: LightDotSo
           #remote-organization-name: enter the remote organization name where the signatures should be stored (Default is storing the signatures in the same repository)
