--- a/crates/solutions/Cargo.toml
+++ b/crates/solutions/Cargo.toml
@@ -15,6 +15,8 @@
   lightdotso-contracts = { workspace = true }
   rand = { workspace = true }
   serde = { workspace = true }
+  serde_bytes = "0.11.12"
   serde_json = { workspace = true }
+  serde_with = "3.3.0"
   test-fuzz = "4.0.2"
   tokio = { workspace = true }
