--- a/.prettierignore
+++ b/.prettierignore
@@ -5,6 +5,7 @@ apps/subgraph/generated/**/*.ts
 apps/ui/src/components/**
 apps/extension/**
 configurations/prisma/src/zod/**
+crates/solutions/tests/samples/**
 packages/client/src/*.d.ts
 ios/LightWallet
 ios/LightWalletSafariExtension/Resources/**
@@ -29,4 +30,3 @@ lib
 out
 out-wagmi
 target
-
