--- a/crates/solutions/Cargo.toml
+++ b/crates/solutions/Cargo.toml
@@ -13,6 +13,7 @@
   ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-contracts = { workspace = true }
+  lightdotso-tracing = { workspace = true }
   rand = { workspace = true }
   serde = { workspace = true }
   serde_bytes = "0.11.12"
