--- a/crates/solutions/Cargo.toml
+++ b/crates/solutions/Cargo.toml
@@ -23,5 +23,5 @@
   tokio = { workspace = true }
 
 [dev-dependencies]
-  insta = "1.17"
+  insta = { workspace = true }
   lazy_static = { workspace = true }
