--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -173,34 +173,6 @@ jobs:
         continue-on-error: true
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-graph:
-    if: github.event_name == 'workflow_dispatch' && inputs.group == 'graph'
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/graph
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-ipfs:
-    if: github.event_name == 'workflow_dispatch' && inputs.group == 'graph'
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/ipfs
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer:
     runs-on: ubuntu-latest
     needs:
@@ -488,8 +460,6 @@ jobs:
       - fly-deploy-consumer-tx
       - fly-deploy-gas
       - fly-deploy-grafana
-      - fly-deploy-graph
-      - fly-deploy-ipfs
       - fly-deploy-indexer
       - fly-deploy-indexer-arbitrum
       - fly-deploy-indexer-base
@@ -515,5 +485,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-graph,fly-deploy-ipfs,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-mainnet,fly-deploy-indexer-optimism,fly-deploy-indexer-polygon,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-polling,fly-deploy-polling-live,fly-deploy-polling-past,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer-arbitrum,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-mainnet,fly-deploy-indexer-optimism,fly-deploy-indexer-polygon,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-polling,fly-deploy-polling-live,fly-deploy-polling-past,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
