--- a/configurations/prisma/package.json
+++ b/configurations/prisma/package.json
@@ -26,13 +26,12 @@
     "db:migrate:dev": "dotenv prisma migrate dev --create-only",
     "db:push": "prisma db push",
     "dev:prisma": "pnpm run db:migrate:deploy:dev && pnpm run studio:dev",
-    "generate": "pnpm run shell:copy && pnpm run shell:generate && pnpm run prisma:generate && pnpm run prisma:format",
+    "generate": "pnpm run shell:generate && pnpm run prisma:generate && pnpm run prisma:format",
     "predev": "npm run generate",
     "prisma:format": "pnpm run prisma:format:main && pnpm run prisma:format:rs",
     "prisma:format:main": "prisma format --schema=./prisma/schema.prisma",
     "prisma:format:rs": "prisma format --schema=./prisma/schema-rs.prisma",
     "prisma:generate": "prisma generate",
-    "shell:copy": "bash ./copy_env_variables.sh || true",
     "shell:generate": "bash ./generate.sh",
     "studio": "prisma studio",
     "studio:dev": "dotenv -e .env.development prisma studio"
