feat: ini wallet create (#726)
* fix: cargo impl

* chore: update

* chore: update

* perf: ini wallet create

* chore: update

* chore: update

* chore: update

* perf: ini wallet create post query

* chore: update

* chore: update

* perf: ini request params

* perf: ini default

* perf: update wallet config

* perf: upgrade prisma schema

* chore: update

* perf: ini log

* chore: update

* chore: update

* chore: update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@
     "opentelemetry-0_20",
     "prometheus-exporter",
   ], default-features = false }
-  axum = { version = "0.6.16", features = ["ws"] }
+  axum = { version = "0.6.16", features = ["macros", "ws"] }
   backon = "0.4.1"
   base64 = "0.21.3"
   byteorder = "1.4.3"
@@ -131,13 +131,13 @@
   opentelemetry-prometheus = "0.13.0"
   opentelemetry_sdk = { version = "0.20.0", features = ["metrics"] }
   once_cell = "1.8.0"
-  prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
+  prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", features = [
     "migrations",
     "mocking",
     "sqlite",
     "sqlite-create-many",
   ] }
-  prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
+  prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", features = [
     "migrations",
     "mocking",
     "sqlite",
