--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,7 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "next build || true",
+    "build": "next build",
     "dev": "next dev -p 3001",
     "lint": "next lint",
     "start": "next start"
