--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -50,6 +50,7 @@
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
     "framer-motion": "^10.16.4",
+    "inngest": "^3.1.1",
     "kysely-postgres-js": "^1.1.1",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
