--- a/package.json
+++ b/package.json
@@ -68,18 +68,18 @@
     "wagmi:generate": "wagmi generate"
   },
   "dependencies": {
-    "next": "13.4.5",
+    "next": "13.5.4",
     "solc": "0.8.18"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@commitlint/config-conventional": "^17.7.0",
-    "@evmts/config": "^0.7.0",
-    "@evmts/core": "^0.6.0",
-    "@evmts/ts-plugin": "^0.7.1",
-    "@evmts/vite-plugin": "^0.7.1",
-    "@evmts/webpack-plugin": "^0.7.1",
+    "@evmts/config": "^0.10.0",
+    "@evmts/core": "^0.11.2",
+    "@evmts/ts-plugin": "^0.11.2",
+    "@evmts/vite-plugin": "^0.11.2",
+    "@evmts/webpack-plugin": "^0.11.2",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
     "@lightdotso/solutions": "workspace:*",
@@ -90,86 +90,88 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^4.9.3",
-    "@playwright/test": "^1.37.1",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@playwright/test": "^1.39.0",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@swc/core": "^1.3.80",
+    "@swc/core": "^1.3.92",
     "@taplo/cli": "^0.5.2",
-    "@thunderclient/cli": "^1.6.0",
+    "@thunderclient/cli": "^1.7.1",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.5.7",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "@viem/anvil": "0.0.6",
-    "@vitest/coverage-v8": "^0.34.3",
-    "@vitest/ui": "^0.34.3",
-    "@wagmi/cli": "^1.3.0",
-    "abitype": "^0.9.8",
-    "autoprefixer": "^10.4.15",
-    "chai": "^4.3.8",
-    "checkly": "^4.0.14",
-    "commitlint": "^17.7.1",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
+    "@wagmi/cli": "^1.5.2",
+    "abitype": "^0.10.0",
+    "autoprefixer": "^10.4.16",
+    "chai": "^4.3.10",
+    "checkly": "^4.2.0",
+    "commitlint": "^17.7.2",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
-    "depcheck": "^1.4.5",
+    "depcheck": "^1.4.6",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
-    "esbuild": "^0.19.2",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.5",
+    "esbuild": "^0.19.4",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-turbo": "^1.10.13",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-cypress": "^2.14.0",
+    "eslint-config-turbo": "^1.10.15",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-editorconfig": "^4.0.3",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsonc": "^2.9.0",
+    "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
     "git-cz": "^4.9.0",
-    "hardhat": "^2.17.2",
+    "hardhat": "^2.18.1",
     "husky": "^8.0.3",
-    "inngest-cli": "^0.16.6",
+    "inngest-cli": "^0.19.0",
     "license-check-and-add": "^4.0.5",
     "lint-staged": "^14.0.1",
-    "neonctl": "^1.21.3",
-    "npm-check-updates": "^16.13.2",
+    "neonctl": "^1.22.0",
+    "npm-check-updates": "^16.14.5",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "release-it": "^16.1.5",
-    "rimraf": "^5.0.1",
+    "release-it": "^16.2.1",
+    "rimraf": "^5.0.5",
     "solhint": "^3.6.2",
     "solidity-docgen": "0.6.0-beta.36",
-    "sort-package-json": "^2.5.1",
+    "sort-package-json": "^2.6.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "tsup": "^7.2.0",
-    "turbo": "^1.10.13",
+    "turbo": "^1.10.15",
     "typescript": "^5.2.2",
-    "vercel": "^32.1.0",
-    "viem": "^1.9.0",
-    "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.3",
+    "vercel": "^32.4.1",
+    "viem": "^1.16.4",
+    "vite": "^4.4.11",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.6",
     "vitest-solidity-coverage": "^0.1.4"
   },
-  "packageManager": "pnpm@8.6.9",
+  "packageManager": "pnpm@8.9.0",
   "pnpm": {
     "overrides": {
       "next": "$next"
     },
-    "patchedDependencies": {}
+    "patchedDependencies": {
+      "next@13.5.4": "patches/next@13.5.4.patch"
+    }
   }
 }
