--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,8 +19,8 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "pnpm run build:openapi && pnpm run build:prepare && pnpm tsup",
-    "build:openapi": "npx openapi-typescript https://api.light.so/api-docs/openapi.json -o ./src/v1.d.ts",
+    "build": "pnpm run build:light && pnpm run build:prepare && pnpm tsup",
+    "build:light": "npx openapi-typescript https://api.light.so/api-docs/openapi.json -o ./src/v1.d.ts",
     "build:prepare": "./prepend.sh",
     "clean": "rimraf -rf dist && rimraf -rf src/v1.d.ts"
   },
