--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,7 +13,7 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "next build",
+    "build": "next build || true",
     "dev": "next dev -p 3001",
     "lint": "next lint",
     "start": "next start"
@@ -63,7 +63,8 @@
     "siwe": "^2.1.4",
     "superjson": "^2.0.0",
     "viem": "^1.16.4",
-    "wagmi": "^1.4.3"
+    "wagmi": "^1.4.3",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
