--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
     "@lightdotso/client": "workspace:*",
     "@lightdotso/kysely": "workspace:*",
     "@lightdotso/next-auth": "workspace:*",
@@ -28,6 +29,7 @@
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/ui": "workspace:*",
+    "@lightdotso/utils": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@opentelemetry/exporter-trace-otlp-http": "^0.44.0",
     "@opentelemetry/resources": "^1.17.1",
@@ -59,11 +61,13 @@
     "prisma": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "server-only": "^0.0.1",
     "siwe": "^2.1.4",
     "superjson": "^2.0.0",
     "viem": "^1.16.4",
     "wagmi": "^1.4.3",
+    "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
