--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -51,6 +51,7 @@
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "inngest": "^3.1.1",
     "kysely-postgres-js": "^1.1.1",
