--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,10 +19,8 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "pnpm run build:light && pnpm run build:prepare && pnpm tsup",
-    "build:light": "npx openapi-typescript https://api.light.so/api-docs/openapi.json -o ./src/v1.d.ts",
-    "build:prepare": "./prepend.sh",
-    "clean": "rimraf -rf dist && rimraf -rf src/v1.d.ts"
+    "build": "tsup",
+    "clean": "rimraf -rf dist"
   },
   "dependencies": {
     "@lightdotso/schemas": "workspace:*",
