perf: ini solutions

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -27,6 +27,7 @@
     "@lightdotso/kysely": "workspace:*",
     "@lightdotso/next-auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
+    "@lightdotso/solutions": "workspace:*",
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/ui": "workspace:*",
